Correction de la classe .col pour que les éléments enfants s'alignent les uns à côté des autres

--- a/src/style.scss
+++ b/src/style.scss
@@ -65,8 +65,8 @@ article {
 
 .col {
     @include display-flex(flex);
-    @include display-flex-direction(column);
-    @include flexboxWidth('.row-column')
+    @include display-flex-direction(row);
+    @include flexboxWidth('.row-column', '.row-column')
 }
 
 .row-column {
